maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: ')' expected but ';' found.
    setIndication(x,y-1,min(k+1;getIndication(x,y-1)));Tx(0)=x;Ty(0)=y-1
                               ^JediEscaper:19: error: ';' expected but ')' found.
    setIndication(x,y-1,min(k+1;getIndication(x,y-1)));Tx(0)=x;Ty(0)=y-1
                                                    ^JediEscaper:25: error: ')' expected but ';' found.
        setIndication(x-1,y,min(k+1;getIndication(x-1,y));Tx(1)=x-1;Ty(1)=y
                                   ^JediEscaper:25: error: ';' expected but ')' found.
        setIndication(x-1,y,min(k+1;getIndication(x-1,y));Tx(1)=x-1;Ty(1)=y
                                                        ^JediEscaper:30: error: ')' expected but ';' found.
      setIndication(x,y+1,min(k+1;getIndication(x,y+1)));Tx(2)=x;Ty(2)=y+1
                                 ^JediEscaper:30: error: ';' expected but ')' found.
      setIndication(x,y+1,min(k+1;getIndication(x,y+1)));Tx(2)=x;Ty(2)=y+1
                                                      ^JediEscaper:35: error: ')' expected but ';' found.
      setIndication(x,y+1,min(k+1;getIndication(x,y+1)));Tx(3)=x+1;Ty(3)=y
                                 ^JediEscaper:35: error: ';' expected but ')' found.
      setIndication(x,y+1,min(k+1;getIndication(x,y+1)));Tx(3)=x+1;Ty(3)=y
                                                      ^